# printf

./: CMakeLists.txt  Makefile  README.md  ft_printf.c  main.c
includes/: ft_printf.h  libft.h  parser.h  prinft.h  struct.h  utils.h
libft/: ft_putnbr_fd.c  ft_putstr_fd.c  libft.h
src/: ft_printf.c
src/apply/: apply_procent.c
src/parser/: parse_procent.c
src/print/: print_char.c  print_hex.c  print_int.c  print_pointer.c  print_string.c  print_unsigned.c
src/utils/: ft_putnbr_long_fd.c  parse_utils.c  struct_init.c
